# CS2.Calculator.sherifa

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  calculator  calculator.cpp  calculator.h  cmake_install.cmake  test.cpp
